--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
     <i class="social fab fa-instagram"></i>
     <i class="social fab fa-youtube"></i>
     <i class="social fab fa-github"></i>
-    <p>© Copyright 2018 TinDog</p>
+    <p>© 2018 Yangbo Rai @ Front End Developer</p>
 
   </footer>
 
